--- a/discover_collection.ipynb
+++ b/discover_collection.ipynb
@@ -5,7 +5,7 @@
    "id": "ba52fc6d-3578-449e-a216-0093f694a96a",
    "metadata": {},
    "source": [
-    "In this lesson, we will experiment some of the useful techniques we studied in the previous units, for exploring the content of a text corpus. This techniques allow us to identify patterns and recurring themes in the language used across a large number of documents. N-grams enable us to examine the frequency and distribution of sequences of words, while word clouds provide a visual representation of the most commonly used words in a corpus. These techniques can help us to identify key themes, topics, and trends in the language used across a large number of texts, and can be used to test hypotheses and generate new research questions. Additionally, these techniques are relatively simple to implement and can be applied to texts in any language, making them a powerful tool for analyzing large collections of textual data."
+    "#In this lesson, we will experiment some of the useful techniques we studied in the previous units, for exploring the content of a text corpus. This techniques allow us to identify patterns and recurring themes in the language used across a large number of documents. N-grams enable us to examine the frequency and distribution of sequences of words, while word clouds provide a visual representation of the most commonly used words in a corpus. These techniques can help us to identify key themes, topics, and trends in the language used across a large number of texts, and can be used to test hypotheses and generate new research questions. Additionally, these techniques are relatively simple to implement and can be applied to texts in any language, making them a powerful tool for analyzing large collections of textual data."
    ]
   },
   {
