--- a/mapping_locations.ipynb
+++ b/mapping_locations.ipynb
@@ -3834,6 +3834,8 @@
     }
    ],
    "source": [
+    "# CSV EXAMPLE \n",
+    "\n",
     "import pandas as pd\n",
     "\n",
     "df = pd.read_csv('./data/spanish_flu_csv.csv', encoding='utf-8')\n",
@@ -3868,7 +3870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "9787d3c0-a539-4c30-804c-ce2c6a6071a2",
    "metadata": {
     "tags": []
@@ -3918,7 +3920,7 @@
    "id": "ab054f5a-efd6-4815-b7d1-8737165ae8f9",
    "metadata": {},
    "source": [
-    "Install requirements to get locations and display it on a map"
+    "Install the necessary requirements to retrieve locations and display them on a map."
    ]
   },
   {
